update: fixed modal render, footer divider, collection json file

--- a/byfegor-site/src/index.css
+++ b/byfegor-site/src/index.css
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=poppins=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "poppins", sans-serif;
   background-color: #f5f5f5;
   color: #333;
 }
@@ -16,8 +16,12 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: "Bodoni Moda", serif;
   margin-bottom: 16px;
   font-weight: 600;
+}
+a {
+  font-family: "Bodoni Moda", serif;
 }
 .container {
   max-width: 84rem;
