--- a/byfegor-site/src/components/collection.css
+++ b/byfegor-site/src/components/collection.css
@@ -32,6 +32,11 @@
   object-position: center;
   margin-bottom: 0;
   border-radius: 1px;
+  transition: transform 0.4s;
+  &:hover {
+    transform: scale(1.01);
+    cursor: pointer;
+  }
 }
 
 .collection-item p {
