--- a/byfegor-site/src/components/footer.css
+++ b/byfegor-site/src/components/footer.css
@@ -6,7 +6,18 @@
   flex-wrap: wrap;
   gap: 32px;
   background: #f4f4f4;
-  box-shadow: inset 0 0px 10px #141414;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(165, 42, 42, 0.417);
+    border-radius: 20px;
+  }
 }
 
 .footer-brand {
