--- a/byfegor-site/src/components/hero.css
+++ b/byfegor-site/src/components/hero.css
@@ -48,13 +48,16 @@ header .buttons button {
   padding: 10px;
   text-align: center;
   text-decoration: none;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  > img {
+    filter: brightness(0) invert(1);
+  }
 }
 .hero-section {
   background:
@@ -87,10 +90,11 @@ header .buttons button {
 }
 .hero-section-content button {
   width: max-content;
-  padding: 15px 25px;
+  padding: 16px 40px;
+  border-radius: 5px;
   margin-top: 15px;
-  background-color: white;
-  color: brown;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-size: 1rem;
   border: none;
 }
