--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -27,6 +27,9 @@
     margin-bottom: 0;
     border-radius: 1px;
   }
+  h2 {
+    margin: 0;
+  }
   .product-description {
     display: flex;
     flex-direction: column;
