--- a/byfegor-site/src/components/about.css
+++ b/byfegor-site/src/components/about.css
@@ -1,10 +1,14 @@
+div:has(> .about-section) {
+  display: grid;
+  place-items: center;
+}
 .about-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  min-height: 30rem;
+
   background-color: rgb(0, 0, 0);
   margin: 40px auto;
   border-radius: 20px;
