--- a/byfegor-site/src/components/hero.css
+++ b/byfegor-site/src/components/hero.css
@@ -6,7 +6,7 @@
   color: white;
   /* letter-spacing: 1px; */
   font-weight: 12px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 header {
   background: rgb(255, 255, 255);
@@ -55,7 +55,11 @@ header .buttons button {
   display: flex;
   align-items: center;
   justify-content: center;
-  > img {
+  a {
+    display: flex;
+  }
+  img {
+    width: 20px;
     filter: brightness(0) invert(1);
   }
 }
