--- a/byfegor-site/src/components/collection.css
+++ b/byfegor-site/src/components/collection.css
@@ -10,12 +10,15 @@
   text-transform: uppercase;
   letter-spacing: -1px;
 }
+.prev,
+.next {
+  color: black;
+  display: none;
+}
 .collection-items {
   display: grid;
-  grid-template-columns: repeat(4, minmax(200px, 1fr));
-  gap: 10px;
-  align-items: center;
-  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
 }
 .collection-item h3 {
   margin-top: 0.3rem;
@@ -55,4 +58,30 @@
 }
 .collection-item button:hover {
   background-color: darken(brown, 100%);
+}
+
+/* media queries */
+@media (max-width: 955px) {
+  .collection-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+@media (max-width: 550px) {
+  .collection-items {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+
+    -webkit-overflow-scrolling: touch; /* iOS smooth */
+  }
+  .collection-items::-webkit-scrollbar {
+    display: none; /* optional */
+  }
+  .collection-item {
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+  }
 }
