update: minor style changes

--- a/byfegor-site/src/components/collection.css
+++ b/byfegor-site/src/components/collection.css
@@ -71,6 +71,7 @@
 @media (max-width: 550px) {
   .collection-section h2 {
     font-size: 28px;
+    text-wrap: nowrap;
   }
   .collection-items {
     display: flex;
