--- a/byfegor-site/src/components/hero.css
+++ b/byfegor-site/src/components/hero.css
@@ -17,7 +17,7 @@ header {
   padding: 20px 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-
+  z-index: 1000;
   justify-content: center;
 }
 header nav ul {
