--- a/byfegor-site/src/components/menu.css
+++ b/byfegor-site/src/components/menu.css
@@ -1,7 +1,7 @@
 .menu {
   top: -100vh;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   background-color: rgba(255, 255, 255, 0.98);
   padding-top: 70px;
   width: 100%;
@@ -33,5 +33,6 @@
 .menu.open {
   top: 0;
 
+  inset: 0;
   transition: top 0.3s ease-in-out;
 }
