fix: menu - mobile z index issue

--- a/byfegor-site/src/components/menu.css
+++ b/byfegor-site/src/components/menu.css
@@ -10,6 +10,7 @@
   place-items: center;
   place-content: center;
   transition: top 0.3s ease-in-out;
+  z-index: 50;
 }
 .menu ul li {
   list-style: none;
