update: modal responsivity

--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -62,6 +62,9 @@
 /* media queries */
 
 @media (max-width: 768px) {
+  .modal-container {
+    padding: 1.5rem;
+  }
   .modal-content {
     flex-direction: column;
   }
