--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -68,11 +68,11 @@
   .modal-content {
     img {
       width: 100%;
-      height: 100%;
+      height: auto;
     }
   }
   .modal-content {
     flex-direction: column;
-    height: max-content;
+    height: auto;
   }
 }
