--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -67,8 +67,11 @@
   }
   .modal-content {
     img {
-      width: 100%;
-      height: auto;
+      width: 20rem;
+      height: 20rem;
+      object-fit: cover;
+      object-position: top;
+      justify-self: center;
     }
   }
   .modal-content {
