--- a/byfegor-site/src/components/modal.css
+++ b/byfegor-site/src/components/modal.css
@@ -7,13 +7,24 @@
   justify-content: center;
   z-index: 1000;
 }
-
+.modal-content > button {
+  position: absolute;
+  right: -10px;
+  top: -10px;
+  background: brown;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  color: white;
+  padding: 0.5rem 0.8rem;
+  border-radius: 50%;
+}
 .modal-content {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
+  position: relative;
   display: flex;
   align-items: center;
   gap: 20px;
