--- a/byfegor-site/src/components/about.css
+++ b/byfegor-site/src/components/about.css
@@ -8,7 +8,7 @@ div:has(> .about-section) {
   align-items: center;
   justify-content: center;
   gap: 20px;
-
+  padding-right: 20px;
   background-color: rgb(0, 0, 0);
   margin: 40px auto;
   border-radius: 20px;
