--- a/byfegor-site/src/components/footer.css
+++ b/byfegor-site/src/components/footer.css
@@ -118,10 +118,10 @@
 @media (max-width: 700px) {
   .footer-links {
     flex-direction: column;
+    align-items: center;
     gap: 18px;
   }
   .footer-container {
-    height: 90vh;
-    padding: 32px 12px 12px 12px;
+    min-height: 90vh;
   }
 }
