--- a/byfegor-site/src/components/hero.css
+++ b/byfegor-site/src/components/hero.css
@@ -145,3 +145,9 @@ header .buttons .insta {
     font-size: 0.9rem;
   }
 }
+@media screen and (min-height: 300px) and (max-height: 555px) {
+  .hero-section-content {
+    background-position: 70%;
+    padding-bottom: 2rem;
+  }
+}
