--- a/byfegor-site/src/components/collection.css
+++ b/byfegor-site/src/components/collection.css
@@ -109,7 +109,7 @@
     margin-right: 1.5rem;
   }
 }
-@media screen and (max-width: 1350px) {
+@media screen and (min-width: 550px) and (max-width: 1350px) {
   .collection-section {
     padding: 50px 2rem;
   }
