--- a/byfegor-site/src/components/about.css
+++ b/byfegor-site/src/components/about.css
@@ -79,3 +79,8 @@ div:has(> .about-section) {
     margin-bottom: 10px;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1300px) {
+  .about-section {
+    margin: 40px 30px;
+  }
+}
