--- a/byfegor-site/src/components/footer.css
+++ b/byfegor-site/src/components/footer.css
@@ -115,13 +115,17 @@
   font-size: 0.95rem;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1205px) {
   .footer-links {
     flex-direction: column;
     align-items: center;
+
     gap: 18px;
   }
   .footer-container {
+    align-items: center;
+    justify-content: center;
     min-height: 90vh;
+    padding: 3rem;
   }
 }
